formation1/atelier-2-exposition-dns/depart/00-socle.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-paiements
  labels:
    app.kubernetes.io/name: api-paiements
    app.kubernetes.io/part-of: bdc-paiements
    app.kubernetes.io/component: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: api-paiements
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api-paiements
        app.kubernetes.io/part-of: bdc-paiements
        app.kubernetes.io/component: backend
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: app
          image: ghcr.io/evanndev/formations-kubernetes/app:1.0
          ports:
            # Port nommé « http » : le Service de l'atelier 2 y fait référence par son nom
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-paiements
  labels:
    app.kubernetes.io/name: api-paiements
    app.kubernetes.io/part-of: bdc-paiements
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api-paiements
  ports:
    - name: http
      port: 80
      targetPort: 8080
